Update git ignore and selected images

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,32 @@
 # Ignore directories
 Africa/
-Australia/
 Asia/
+Australia/
 Canada/
+Custom/
+Donations and costs/
 Download links/
 Europe/
-Etsy/
-Experiments/
+Global/
 NorthAmerica/
 nppBackup/
 NZ/
+Printful/
 Promotional/
 QGIS layer files/
 QGIS project files/
 SouthAmerica/
-Test/
-Tolkien/
+Specials/
 USA/
-WAP Artists_Robbi Bishop-Taylor/
-World/
 
 # Ignore file types
 *.Rhistory
+*.xcf
+*.RData
+*.shp
+*.dbf
+*.prj
+*.shx
+*.idea*
+*.dat
+*.json
